@@ -11,7 +11,7 @@ for f in `find $RPM_BUILD_ROOT -type f \( -perm -0100 -or -perm -0010 -or -perm 
 	OUTPUTDIR=${RPM_BUILD_ROOT}/usr/lib/debug${BASEDIR}
 	mkdir -p ${OUTPUTDIR}
 	echo extracting debug info from $f
-	striptofile -g -u -o $OUTPUTDIR $f || :
+	/usr/lib/rpm/striptofile -g -u -o $OUTPUTDIR $f || :
 done
 
 find ${RPM_BUILD_ROOT}/usr/lib/debug -type f | sed -n -e "s#^$RPM_BUILD_ROOT#/#p" > $LISTFILE
